# wtddb

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/: ansi_console_v2.h  getline.h
include/sql/: sql_parse.h  sql_token.h
include/wtddb/: db.h  schemas.h
src/: convert.c  getline.c  main.c  repl.c
src/db/: open.c  schemas.c
src/sql/: sql_token.c
